--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,17 @@
 			<artifactId>log4j-api</artifactId>
 			<version>2.0.2</version>
 		</dependency>
+		<dependency>
+			<groupId>io.appium</groupId>
+			<artifactId>java-client</artifactId>
+			<version>3.4.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.appium</groupId>
+			<artifactId>java-client</artifactId>
+			<version>3.4.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
